--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,18 @@
 {
-	"name": "attinge/php-framework",
-	"description": "A PHP framework project",
-	"minimum-stability": "dev",
-	"license": "MIT",
-	"authors": [
-		{
-			"name": "Caio Augusto",
-			"email": "caio@attingedigital.com.br"
-		}
-	],
 	"autoload": {
 		"psr-4": {
-			"App\\": "src/",
-			"Attinge\\Framework\\": "framework/"
+			"App\\": "src/"
 		}
 	},
-	"require": {
-		"nikic/fast-route": "dev-master"
-	},
+	"minimum-stability": "dev",
+	"repositories": [{
+		"type": "path",
+		"url": "framework"
+	}],
 	"require-dev": {
 		"symfony/var-dumper": "6.3.x-dev"
+	},
+	"require": {
+		"attinge/php-framework": "dev-main"
 	}
 }
