--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,12 @@
 		}
 	},
 	"minimum-stability": "dev",
-	"repositories": [{
-		"type": "path",
-		"url": "framework"
-	}],
+	"repositories": [
+		{
+			"type": "path",
+			"url": "framework"
+		}
+	],
 	"require-dev": {
 		"symfony/var-dumper": "6.3.x-dev"
 	},
